添加h1以消除警告

--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -19,6 +19,7 @@ const len = page.data.length;
 ---
 
 <MainGridLayout description={siteConfig.description}>
+	<h1 class="sr-only">{siteConfig.title}</h1>
     <PostPage page={page}></PostPage>
     <Pagination class="mx-auto onload-animation" page={page} style={`animation-delay: calc(var(--content-delay) + ${(len)*50}ms)`}></Pagination>
 </MainGridLayout>
