--- a/src/pages/[...custom].astro
+++ b/src/pages/[...custom].astro
@@ -39,14 +39,14 @@ const pageIcon = entry.data.icon || "material-symbols:article";
         <div id="custom-container" class="card-base z-10 px-6 md:px-9 pt-6 pb-4 relative w-full">
             <!-- 页面标题区域 -->
             <div class="relative onload-animation">
-                <div class="transition w-full block font-bold mb-3
+                <h1 class="transition w-full block font-bold mb-3
                     text-3xl md:text-[2.25rem]/[2.75rem]
                     text-black/90 dark:text-white/90
                     md:before:w-1 before:h-5 before:rounded-md before:bg-[var(--primary)]
                     before:absolute before:top-[0.75rem] before:left-[-1.125rem]
                 ">
                     {pageTitle}
-                </div>
+                </h1>
             </div>
 
             <!-- 分隔线 -->
