--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -10,6 +10,7 @@ const sortedPostsList = await getSortedPostsList();
 ---
 
 <MainGridLayout title={i18n(I18nKey.archive)} description={siteConfig.description}>
+    <h1 class="sr-only">{i18n(I18nKey.archive)}</h1>
     <ArchivePanel sortedPosts={sortedPostsList} client:only="svelte"></ArchivePanel>
 </MainGridLayout>
 
